# springbok-nlm-kn

./: .gitignore  .gitmodules  README.md  pyproject.toml
cellxgene/: get_dataset.py
chanzuckerberg/: comp_bio_explore_and_load_lung_data.py
ncbi/: first-api-request.sh  get_record_for_pmid.py
ncbi-cell/: create_and_populate_arangodb.py  first_thread_pool.py  get_and_process_lung_datasets.py  get_lung_datasets.py  nsforest  populate_arangodb.py  process_lung_datasets.py  run_arangodb.sh
ncbi-cell/ipynb/: Chapter-01-CELLxGENE.ipynb  Chapter-02-E-Utilities.ipynb  Chapter-03-NS-Forest.ipynb  Chapter-04-OntoGPT.ipynb  Chapter-05-ArangoDB.ipynb  Chapter-06-Nextflow.ipynb  Introduction.ipynb  nsforest-test.sh  nsforest-tutorial.ipynb  publish_ipynb_to_org.py
ncbi-cell/literate-programs/: Chapter-01-CELLxGENE.ipynb  Chapter-01-CELLxGENE.org  Chapter-02-E-Utilities.org  Chapter-02-E_Utilities.org  Introduction.ipynb  Introduction.org
ncbi-cell/nf/: nextflow-with-singularity.config  nsforest-multiple-processes.nf  nsforest-parallel-by-cluster.nf  nsforest-single-process.nf
ncbi-cell/org/: Chapter-01-CELLxGENE.org  Chapter-02-E-Utilities.org  Chapter-03-NS-Forest.org  Chapter-04-OntoGPT.org  Chapter-05-ArangoDB.org  Chapter-06-Nextflow.org  Introduction.org  nsforest  publish_org_to_ipynb.sh
ncbi-cell/py/: ArangoDB.py  CELLxGENE.py  E_Utilities.py  NSForest.py  OntoGPT.py
ncbi-cell/sh/: publish.sh
nlm-kn/ipynb/: CELLxGENE.py  Chapter-01-CELLxGENE.ipynb  (+8 more)
ontogpt/: first-pubmed-annotate.sh
openai/: first-api-request.sh
scripts/: census_citation_generation.py
(+53 files in other folders)
