[tool.poetry]
name = "ncbi-cell"
version = "0.1.0"
description = "Explore various tools of potential use for NCBI-Cell development"
authors = ["Raymond LeClair <raymond.leclair@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
arango-rdf = ">=1.0.0"
cellxgene-census = "^1.14.1"
gget = ">=0.29.0"
ontogpt = "^0.3.14"
plotly = "^5.22.0"
python-arango = ">=7.4,<8.0"
rdflib = ">=7.0.0"
scanpy = ">=1.10.4"
scikit-misc = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
ipython = "^8.25.0"
jupyterlab = "^4.2.1"
mypy = "^1.10.0"
notebook = "^7.2.1"
pylint = "^3.2.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
